# robonix

./: .gitignore  .gitmodules  Genesis  README.md  fix_submodule.sh  init.sh  start.sh  start_genesis.py  start_rviz.sh  start_webots.sh  stop.sh
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: commit.yml
Robonix/driver/raspi_hc_sr04/src/: package.xml  requirements.txt
Robonix/manager/: apply_plugins.py  boot.py  cmdline.py  constant.py  depend.py  eaios_decorators.py  log.py  node.py  process_manage.py
Robonix/memory/: README.md
Robonix/skill/: .gitignore  test.py
Robonix/uapi/: __init__.py  log.py
brain/: .env  README.md  brain-deepseek.py  pkg.py  requirements.txt
brain/simple_test/: llm.py  llm.sh  speech_to_text.py
brain/test_brian/: main.py
capability/: README.md  __init__.py
config/: README.md  include.yaml  include.yml  include_sim.yaml  plugins.yml
cost/: README.md
docs/: README.md  deploy.sh
driver/: README.md
driver/raspi_hc_sr04/src/: CMakeLists.txt  README.md  ros2_node.sh  setup.py
driver/raspi_hc_sr04/src/raspi_hc_sr04/: driver.py  node.py
examples/: README.md
infra/: README.md
manager/: README.md  apply_plugus.py  boot.py  cap_parser.py  capability.py  cmdline.py  constant.py  depend.py  eaios_decorators.py  log.py  node.py  process_manage.py  test.py  test.txt
memory/: README.md  memory.py  test.py  test_embedding.py  test_graph.py
robonix/: driver_1
simulator/: README  __init__.py
skill/: .gitignore  README.md  __init__.py  test.py
uapi/: __init__.py  log.py
(+383 files in other folders)
