<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>raspi_hc_sr04</name>
  <version>0.0.1</version>
  <description>HC-SR04 ultrasonic sensor driver for Raspberry Pi</description>
  <maintainer email="wheatfox17@icloud.com">wheatfox</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
</package> 